# fitbitair-mcp

./: .env.example  .gitignore  README.md  pyproject.toml
deploy/: com.franco.fitbit-sync.plist
notes/: sprint-0-findings.md
scripts/: backfill.py  one_time_auth.py
src/: auth.py  config.py  fitbit_client.py  intervals_client.py  mapper.py  mcp_server.py  sync.py
tests/: test_intervals_client.py  test_mapper.py  test_mcp_server.py
tests/fixtures/: heart_rate.json  hrv.json  respiratory_rate.json  resting_hr.json  skin_temp.json  sleep.json  spo2.json  steps.json  weight.json
