[project]
name = "fitbit-intervals-sync"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "google-auth>=2.30.0",
    "google-auth-oauthlib>=1.2.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "click>=8.1.0",
    "mcp>=1.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
    "responses>=0.25.0",
]

[project.scripts]
fitbit-sync = "src.sync:main"
fitbit-mcp = "src.mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
